stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_value_out_of_bounds.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "d6a7dedae120b9726b47470921b78253f0e5f6f3c8e98577c51111921c65b521",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_4-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ad2e67058473c6340ae95f2aadfbc66e5be11b9c56dd85a614aa84534ca631f4",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_4-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b17348740b28c5d32f75f6d577b340066ab5c96994cfb7c960103e31190cdafb",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_4-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b641ce3afd8f9af26dd32624207d61caab03c0c27767a0ec70e92ceb4bffa881",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "b442a24eaded40af69823e962d5e2c4b18b61df5c925a49897ab0fa92de2a849",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "e5c7924dc9c18c5858796ac32a0894933bf99912d6cdc851e4e514c580cae532",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch4_0-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7c0c1471ef4722ca1db46c355758e94dd193362c99ba0d5ef2a9455a31332ae7",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch4_0-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "0884e161fd0bd7dbfcf85923647c0a02d7b1f493d24634bc46a570028b96bc5e",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch4_0-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a9211faa8342ddab957684f14d50611bc228f0a757b5270062613b931714c0c6",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "adb8ff350996d5980e167997cc7509956284ac34c5d34fa20697e56fceffbe2f",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "d5fec92dc744ef3b016bff1b9ecba20b767d959b895e0ca1b5dc63698ef79d8c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: value-out-of-bounds-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: created a type which value size was out of defined bounds) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 16,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2200,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 16,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2200,
    ),
  )),
]
