stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_with_all_allowance_not_allowed.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "b472edc9380e3b655021c8182862e0cc9255faf299ed85638be90885e5b69f30",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-allowed-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: with-all-assets-unsafe is not allowed here, only in the allowance list for `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2029,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2029,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f493944382d3e760e9cd33305db56793569c24ebefd7fb8a05d6377580a3d8ce",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-allowed-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: with-all-assets-unsafe is not allowed here, only in the allowance list for `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2029,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2029,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "32d5c5171453fc8b7463b09131c329e5af5f254af9a67736f40afc3baefd8216",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-allowed-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: with-all-assets-unsafe is not allowed here, only in the allowance list for `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2029,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2029,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9c5b3b53ed4049921a426603b04723d13841671c44fc6e65fe9b4058756212c5",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-allowed-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: with-all-assets-unsafe is not allowed here, only in the allowance list for `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2029,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2029,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "36665fd65f519f3420494c3ae09351a82cbade027b6cd0ea9f66d94bfdd8e98c",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-allowed-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: with-all-assets-unsafe is not allowed here, only in the allowance list for `as-contract?`) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 8,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2029,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 8,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2029,
    ),
  )),
]
