stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__static_analysis_tests__static_check_error_with_all_allowance_not_alone.snap
---
source: stackslib/src/chainstate/tests/static_analysis_tests.rs
expression: result.get_expected_results()
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "15509dec682eee81f31be5e977580d0dfc58ec9057e16fae20293e190200e70a",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-alone-Epoch3_4-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: with-all-assets-unsafe must not be used along with other allowances) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1977,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1977,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "12e5221eca1fc770a822ef4b72cbe877654b0c533e07df8a5d6ebdbd80f5d729",
    evaluated_epoch: Epoch34,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-alone-Epoch3_4-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: with-all-assets-unsafe must not be used along with other allowances) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1977,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1977,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dfd2b8fee3c51bb5c6ab89d31d245b018fb1adf8dff8ae87de22f70e5c32b9ce",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-alone-Epoch4_0-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: with-all-assets-unsafe must not be used along with other allowances) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1977,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1977,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "21fff74d77f2d09b185f8df26b4c0020a7db4ad8995216bb4d3f8eaa4bbd3392",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-alone-Epoch4_0-Clarity5, code_body: [..], clarity_version: Some(Clarity5))",
        vm_error: "Some(:0:0: with-all-assets-unsafe must not be used along with other allowances) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1977,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1977,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "dea784e7fdabfe07a9bb91a159f58fc5ca5717508287d76f1192b25716d23cc2",
    evaluated_epoch: Epoch40,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: all-allow-not-alone-Epoch4_0-Clarity6, code_body: [..], clarity_version: Some(Clarity6))",
        vm_error: "Some(:0:0: with-all-assets-unsafe must not be used along with other allowances) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 1977,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 1977,
    ),
  )),
]
